// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WalletVote > should disable vote button when balance is less than votesAmountStep 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-center -mt-4 w-full md:flex-row md:items-center md:mt-0"
    data-testid="WalletVote"
  >
    <div
      class="flex flex-row justify-start items-center w-full md:justify-start xs:justify-center"
      data-testid="EmptyVotes"
    >
      <div
        class="pb-4 text-base font-semibold text-center md:px-0 md:pb-0 md:mt-0 md:text-left text-theme-secondary-700 px-[22px] dark:text-theme-dark-200"
      >
        You have not voted for a Delegate yet. 
        <a
          class="inline-flex relative items-center space-x-1 font-semibold no-underline transition-colors cursor-pointer text-theme-primary-600 ring-focus group/inner dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden active:text-theme-primary-400"
          data-ring-focus-margin="-m-1"
          data-testid="Link"
          href="https://arkvault.io/docs/transactions/vote"
          rel="noopener noreferrer"
        >
          <span
            class="break-all border-b border-transparent transition-colors duration-200 delay-100 group-hover/inner:border-current"
          >
            <span
              class="text-base leading-5"
            >
              Learn more
            </span>
          </span>
          <div
            class="inline-block text-sm align-middle duration-200 mb-[3px] shrink-0"
            data-testid="Link__external"
          >
            <div
              style="height: 12px; width: 12px;"
            >
              <svg
                id="arrow-external"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </a>
      </div>
    </div>
    <div
      class="w-full md:w-auto md:max-md:self-end"
    >
      <button
        class="hidden relative justify-center items-center py-3 px-5 mt-4 space-x-2 w-full text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer md:flex md:px-2 md:mt-0 md:w-auto focus:ring-2 disabled:bg-transparent disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-primary-600 md:py-[3px] dark:disabled:text-theme-secondary-700 dark:text-theme-dark-navy-400 dark:disabled:bg-transparent focus:outline-hidden focus:ring-theme-primary-400 disabled:text-theme-secondary-400"
        data-testid="WalletVote__button"
        disabled=""
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="vote"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                  />
                  <path
                    d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
      <button
        class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 w-full text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer md:hidden dark:text-white focus:ring-2 disabled:bg-transparent disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-primary-600 dark:disabled:text-theme-secondary-700 dark:disabled:bg-transparent focus:outline-hidden focus:ring-theme-primary-400 disabled:text-theme-secondary-400"
        data-testid="WalletVote__button_mobile"
        disabled=""
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="vote"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                  />
                  <path
                    d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > should render 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-center -mt-4 w-full md:flex-row md:items-center md:mt-0"
    data-testid="WalletVote"
  >
    <div
      class="flex flex-row justify-start items-center w-full md:justify-start xs:justify-center"
      data-testid="EmptyVotes"
    >
      <div
        class="pb-4 text-base font-semibold text-center md:px-0 md:pb-0 md:mt-0 md:text-left text-theme-secondary-700 px-[22px] dark:text-theme-dark-200"
      >
        You have not voted for a Delegate yet. 
        <a
          class="inline-flex relative items-center space-x-1 font-semibold no-underline transition-colors cursor-pointer text-theme-primary-600 ring-focus group/inner dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden active:text-theme-primary-400"
          data-ring-focus-margin="-m-1"
          data-testid="Link"
          href="https://arkvault.io/docs/transactions/vote"
          rel="noopener noreferrer"
        >
          <span
            class="break-all border-b border-transparent transition-colors duration-200 delay-100 group-hover/inner:border-current"
          >
            <span
              class="text-base leading-5"
            >
              Learn more
            </span>
          </span>
          <div
            class="inline-block text-sm align-middle duration-200 mb-[3px] shrink-0"
            data-testid="Link__external"
          >
            <div
              style="height: 12px; width: 12px;"
            >
              <svg
                id="arrow-external"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </a>
      </div>
    </div>
    <div
      class="w-full md:w-auto md:max-md:self-end"
    />
  </div>
</DocumentFragment>
`;

exports[`WalletVote > should render as all resigned 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-center -mt-4 w-full md:flex-row md:items-center md:mt-0"
    data-testid="WalletVote"
  >
    <div
      class="flex overflow-hidden flex-col gap-0 justify-between items-start mb-3 w-full rounded border md:flex-row md:gap-2 md:items-center md:mb-0 md:rounded-none md:border-none border-theme-secondary-300 dark:border-theme-dark-700"
    >
      <div
        class="flex flex-row gap-2 items-center p-3 w-full text-sm font-semibold md:p-0 md:w-auto md:text-base md:leading-5 md:bg-transparent bg-theme-secondary-100 leading-[17px] md:dark:bg-transparent dark:bg-theme-dark-950"
      >
        <p
          class="text-sm md:text-base md:leading-5 text-theme-secondary-700 dark:text-theme-dark-200"
        >
          Voting for
        </p>
        <div
          class="xs:max-w-32 max-w-28 truncate sm:max-w-40 md:max-w-48"
        >
          <div
            class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
          >
            <span
              class="overflow-hidden min-w-0 text-sm text-base font-semibold md:text-base md:leading-5 no-ligatures dark:text-theme-dark-50"
              data-testid="Address__address"
            >
              0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col gap-2 py-3 px-4 text-base font-semibold leading-5 md:flex-row md:py-0 md:px-0"
      >
        <p
          class="text-sm md:text-base md:leading-5 text-theme-secondary-700 dark:text-theme-dark-200"
        >
          Rank
        </p>
        <p
          class="mb-2 text-sm font-semibold md:mb-0 md:text-base md:leading-5 text-theme-secondary-900 dark:text-theme-dark-50"
        >
          N/A
        </p>
        <p
          class="text-sm md:hidden text-theme-secondary-700 dark:text-theme-dark-200"
        >
          Delegate Status
        </p>
        <div
          class="flex overflow-hidden justify-center items-center py-0.5 px-1 text-xs font-semibold rounded border-2 border-none dark:border-solid no-ligatures text-theme-danger-500 border-theme-danger-100 bg-theme-danger-100 h-fit w-fit"
        >
          All Resigned
        </div>
        <div
          class="hidden relative p-0 mx-2 mr-3 ml-1 h-5 align-middle border-t-0 border-l border-solid md:flex border-theme-secondary-300 dark:border-s-theme-dark-700"
        />
      </div>
    </div>
    <div
      class="w-full md:w-auto md:max-md:self-end"
    >
      <button
        class="hidden relative justify-center items-center py-3 px-5 mt-4 space-x-2 w-full text-base font-semibold leading-tight text-center bg-transparent rounded duration-100 ease-linear cursor-pointer md:flex md:px-2 md:mt-0 md:w-auto dark:bg-transparent focus:ring-2 disabled:bg-transparent disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-primary-600 md:py-[3px] dark:hover:bg-theme-secondary-800 dark:hover:text-white dark:text-theme-dark-navy-400 dark:disabled:bg-transparent hover:text-theme-primary-700 hover:bg-theme-primary-200 focus:outline-hidden focus:ring-theme-primary-400"
        data-testid="WalletVote__button"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="vote"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                  />
                  <path
                    d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
      <button
        class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 w-full text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer md:hidden dark:text-white hover:text-white focus:ring-2 disabled:bg-transparent disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-dark-800 dark:hover:bg-theme-primary-500 dark:disabled:bg-transparent hover:bg-theme-primary-800 focus:outline-hidden focus:ring-theme-primary-400"
        data-testid="WalletVote__button_mobile"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="vote"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                  />
                  <path
                    d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > should render disabled vote button 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-center -mt-4 w-full md:flex-row md:items-center md:mt-0"
    data-testid="WalletVote"
  >
    <div
      class="flex flex-row justify-start items-center w-full md:justify-start xs:justify-center"
      data-testid="EmptyVotes"
    >
      <div
        class="pb-4 text-base font-semibold text-center md:px-0 md:pb-0 md:mt-0 md:text-left text-theme-secondary-700 px-[22px] dark:text-theme-dark-200"
      >
        You have not voted for a Delegate yet. 
        <a
          class="inline-flex relative items-center space-x-1 font-semibold no-underline transition-colors cursor-pointer text-theme-primary-600 ring-focus group/inner dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden active:text-theme-primary-400"
          data-ring-focus-margin="-m-1"
          data-testid="Link"
          href="https://arkvault.io/docs/transactions/vote"
          rel="noopener noreferrer"
        >
          <span
            class="break-all border-b border-transparent transition-colors duration-200 delay-100 group-hover/inner:border-current"
          >
            <span
              class="text-base leading-5"
            >
              Learn more
            </span>
          </span>
          <div
            class="inline-block text-sm align-middle duration-200 mb-[3px] shrink-0"
            data-testid="Link__external"
          >
            <div
              style="height: 12px; width: 12px;"
            >
              <svg
                id="arrow-external"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </a>
      </div>
    </div>
    <div
      class="w-full md:w-auto md:max-md:self-end"
    >
      <button
        class="hidden relative justify-center items-center py-3 px-5 mt-4 space-x-2 w-full text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer md:flex md:px-2 md:mt-0 md:w-auto focus:ring-2 disabled:bg-transparent disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-primary-600 md:py-[3px] dark:disabled:text-theme-secondary-700 dark:text-theme-dark-navy-400 dark:disabled:bg-transparent focus:outline-hidden focus:ring-theme-primary-400 disabled:text-theme-secondary-400"
        data-testid="WalletVote__button"
        disabled=""
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="vote"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                  />
                  <path
                    d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
      <button
        class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 w-full text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer md:hidden dark:text-white focus:ring-2 disabled:bg-transparent disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-primary-600 dark:disabled:text-theme-secondary-700 dark:disabled:bg-transparent focus:outline-hidden focus:ring-theme-primary-400 disabled:text-theme-secondary-400"
        data-testid="WalletVote__button_mobile"
        disabled=""
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="vote"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                  />
                  <path
                    d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > should render ledger for incompatible ledger wallet 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-center -mt-4 w-full md:flex-row md:items-center md:mt-0"
    data-testid="WalletVote"
  >
    <div
      class="flex flex-row justify-start items-center w-full md:justify-start xs:justify-center"
      data-testid="EmptyVotes"
    >
      <div
        class="pb-4 text-base font-semibold text-center md:px-0 md:pb-0 md:mt-0 md:text-left text-theme-secondary-700 px-[22px] dark:text-theme-dark-200"
      >
        You have not voted for a Delegate yet. 
        <a
          class="inline-flex relative items-center space-x-1 font-semibold no-underline transition-colors cursor-pointer text-theme-primary-600 ring-focus group/inner dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden active:text-theme-primary-400"
          data-ring-focus-margin="-m-1"
          data-testid="Link"
          href="https://arkvault.io/docs/transactions/vote"
          rel="noopener noreferrer"
        >
          <span
            class="break-all border-b border-transparent transition-colors duration-200 delay-100 group-hover/inner:border-current"
          >
            <span
              class="text-base leading-5"
            >
              Learn more
            </span>
          </span>
          <div
            class="inline-block text-sm align-middle duration-200 mb-[3px] shrink-0"
            data-testid="Link__external"
          >
            <div
              style="height: 12px; width: 12px;"
            >
              <svg
                id="arrow-external"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </a>
      </div>
    </div>
    <div
      class="w-full md:w-auto md:max-md:self-end"
    />
  </div>
</DocumentFragment>
`;

exports[`WalletVote > should render skeleton if loading 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col rounded-xl border md:bg-transparent md:border-0 dark:bg-black border-theme-secondary-300 bg-theme-secondary-100 md:dark:bg-transparent dark:border-theme-secondary-800"
    data-testid="WalletVote__skeleton"
  >
    <div
      class="flex items-center py-4 px-8 w-full md:p-0 h-[1.688rem]"
    >
      <div
        class="flex items-center space-x-2"
      >
        <p
          class="text-sm font-semibold md:text-base md:leading-5 text-theme-secondary-700 dark:text-theme-dark-200"
        >
          Voting for
        </p>
        <span
          aria-busy="true"
          aria-live="polite"
          class="flex overflow-hidden items-center w-auto max-w-full leading-none"
        >
          <span
            class="react-loading-skeleton"
            style="width: 67px; height: 20px;"
          >
            ‌
          </span>
          <br />
        </span>
      </div>
      <div
        class="flex items-center ml-auto space-x-2"
      >
        <p
          class="text-sm font-semibold md:text-base md:leading-5 text-theme-secondary-700 dark:text-theme-dark-200"
        >
          Rank
        </p>
        <span
          aria-busy="true"
          aria-live="polite"
          class="flex overflow-hidden items-center w-auto max-w-full leading-none"
        >
          <span
            class="react-loading-skeleton"
            style="width: 62px; height: 20px;"
          >
            ‌
          </span>
          <br />
        </span>
        <div
          class="flex items-center space-x-3"
        >
          <span
            aria-busy="true"
            aria-live="polite"
            class="flex overflow-hidden items-center w-auto max-w-full leading-none"
          >
            <span
              class="react-loading-skeleton"
              style="width: 62px; height: 20px;"
            >
              ‌
            </span>
            <br />
          </span>
          <div
            class="inline-block relative mx-2 h-4 align-middle border-t-0 border-l border-solid border-theme-secondary-300 dark:border-theme-secondary-800"
          />
          <button
            class="hidden relative justify-center items-center py-3 px-5 mt-4 space-x-2 w-full text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer md:flex md:px-2 md:mt-0 md:w-auto focus:ring-2 disabled:bg-transparent disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-primary-600 md:py-[3px] dark:disabled:text-theme-secondary-700 dark:text-theme-dark-navy-400 dark:disabled:bg-transparent focus:outline-hidden focus:ring-theme-primary-400 disabled:text-theme-secondary-400"
            disabled=""
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="vote"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                      />
                      <path
                        d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                      />
                    </g>
                  </svg>
                </div>
              </div>
              <span>
                Vote
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="flex justify-center py-4 px-6 border-t md:hidden border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <div
        class="flex flex-col justify-between items-center h-10"
      >
        <span
          aria-busy="true"
          aria-live="polite"
          class="flex overflow-hidden items-center w-auto max-w-full leading-none"
        >
          <span
            class="react-loading-skeleton"
            style="width: 150px; height: 16px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
          class="flex overflow-hidden items-center w-auto max-w-full leading-none"
        >
          <span
            class="react-loading-skeleton"
            style="width: 100px; height: 14px;"
          >
            ‌
          </span>
          <br />
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > should render the maximum votes 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-center -mt-4 w-full md:flex-row md:items-center md:mt-0"
    data-testid="WalletVote"
  >
    <div
      class="flex flex-row justify-start items-center w-full md:justify-start xs:justify-center"
      data-testid="EmptyVotes"
    >
      <div
        class="pb-4 text-base font-semibold text-center md:px-0 md:pb-0 md:mt-0 md:text-left text-theme-secondary-700 px-[22px] dark:text-theme-dark-200"
      >
        You have not voted for a Delegate yet. 
        <a
          class="inline-flex relative items-center space-x-1 font-semibold no-underline transition-colors cursor-pointer text-theme-primary-600 ring-focus group/inner dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden active:text-theme-primary-400"
          data-ring-focus-margin="-m-1"
          data-testid="Link"
          href="https://arkvault.io/docs/transactions/vote"
          rel="noopener noreferrer"
        >
          <span
            class="break-all border-b border-transparent transition-colors duration-200 delay-100 group-hover/inner:border-current"
          >
            <span
              class="text-base leading-5"
            >
              Learn more
            </span>
          </span>
          <div
            class="inline-block text-sm align-middle duration-200 mb-[3px] shrink-0"
            data-testid="Link__external"
          >
            <div
              style="height: 12px; width: 12px;"
            >
              <svg
                id="arrow-external"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </a>
      </div>
    </div>
    <div
      class="w-full md:w-auto md:max-md:self-end"
    >
      <button
        class="hidden relative justify-center items-center py-3 px-5 mt-4 space-x-2 w-full text-base font-semibold leading-tight text-center bg-transparent rounded duration-100 ease-linear cursor-pointer md:flex md:px-2 md:mt-0 md:w-auto dark:bg-transparent focus:ring-2 disabled:bg-transparent disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-primary-600 md:py-[3px] dark:hover:bg-theme-secondary-800 dark:hover:text-white dark:text-theme-dark-navy-400 dark:disabled:bg-transparent hover:text-theme-primary-700 hover:bg-theme-primary-200 focus:outline-hidden focus:ring-theme-primary-400"
        data-testid="WalletVote__button"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="vote"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                  />
                  <path
                    d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
      <button
        class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 w-full text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer md:hidden dark:text-white hover:text-white focus:ring-2 disabled:bg-transparent disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-dark-800 dark:hover:bg-theme-primary-500 dark:disabled:bg-transparent hover:bg-theme-primary-800 focus:outline-hidden focus:ring-theme-primary-400"
        data-testid="WalletVote__button_mobile"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="vote"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                  />
                  <path
                    d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > should render without votes 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-center -mt-4 w-full md:flex-row md:items-center md:mt-0"
    data-testid="WalletVote"
  >
    <div
      class="flex flex-row justify-start items-center w-full md:justify-start xs:justify-center"
      data-testid="EmptyVotes"
    >
      <div
        class="pb-4 text-base font-semibold text-center md:px-0 md:pb-0 md:mt-0 md:text-left text-theme-secondary-700 px-[22px] dark:text-theme-dark-200"
      >
        You have not voted for a Delegate yet. 
        <a
          class="inline-flex relative items-center space-x-1 font-semibold no-underline transition-colors cursor-pointer text-theme-primary-600 ring-focus group/inner dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden active:text-theme-primary-400"
          data-ring-focus-margin="-m-1"
          data-testid="Link"
          href="https://arkvault.io/docs/transactions/vote"
          rel="noopener noreferrer"
        >
          <span
            class="break-all border-b border-transparent transition-colors duration-200 delay-100 group-hover/inner:border-current"
          >
            <span
              class="text-base leading-5"
            >
              Learn more
            </span>
          </span>
          <div
            class="inline-block text-sm align-middle duration-200 mb-[3px] shrink-0"
            data-testid="Link__external"
          >
            <div
              style="height: 12px; width: 12px;"
            >
              <svg
                id="arrow-external"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </a>
      </div>
    </div>
    <div
      class="w-full md:w-auto md:max-md:self-end"
    />
  </div>
</DocumentFragment>
`;

exports[`WalletVote > single vote networks > should render a vote for a delegate without rank 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-center -mt-4 w-full md:flex-row md:items-center md:mt-0"
    data-testid="WalletVote"
  >
    <div
      class="flex overflow-hidden flex-col gap-0 justify-between items-start mb-3 w-full rounded border md:flex-row md:gap-2 md:items-center md:mb-0 md:rounded-none md:border-none border-theme-secondary-300 dark:border-theme-dark-700"
    >
      <div
        class="flex flex-row gap-2 items-center p-3 w-full text-sm font-semibold md:p-0 md:w-auto md:text-base md:leading-5 md:bg-transparent bg-theme-secondary-100 leading-[17px] md:dark:bg-transparent dark:bg-theme-dark-950"
      >
        <p
          class="text-sm md:text-base md:leading-5 text-theme-secondary-700 dark:text-theme-dark-200"
        >
          Voting for
        </p>
        <div
          class="xs:max-w-32 max-w-28 truncate sm:max-w-40 md:max-w-48"
        >
          <div
            class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
          >
            <span
              class="overflow-hidden min-w-0 text-sm text-base font-semibold md:text-base md:leading-5 no-ligatures dark:text-theme-dark-50"
              data-testid="Address__address"
            >
              0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col gap-2 py-3 px-4 text-base font-semibold leading-5 md:flex-row md:py-0 md:px-0"
      >
        <p
          class="text-sm md:text-base md:leading-5 text-theme-secondary-700 dark:text-theme-dark-200"
        >
          Rank
        </p>
        <p
          class="mb-2 text-sm font-semibold md:mb-0 md:text-base md:leading-5 text-theme-secondary-900 dark:text-theme-dark-50"
        >
          N/A
        </p>
        <p
          class="text-sm md:hidden text-theme-secondary-700 dark:text-theme-dark-200"
        >
          Delegate Status
        </p>
        <div
          class="flex overflow-hidden justify-center items-center py-0.5 px-1 text-xs font-semibold rounded border-2 border-none dark:border-solid no-ligatures text-theme-warning-700 border-theme-danger-100 h-fit w-fit dark:border-theme-warning-700"
        >
          Standby
        </div>
        <div
          class="hidden relative p-0 mx-2 mr-3 ml-1 h-5 align-middle border-t-0 border-l border-solid md:flex border-theme-secondary-300 dark:border-s-theme-dark-700"
        />
      </div>
    </div>
    <div
      class="w-full md:w-auto md:max-md:self-end"
    >
      <button
        class="hidden relative justify-center items-center py-3 px-5 mt-4 space-x-2 w-full text-base font-semibold leading-tight text-center bg-transparent rounded duration-100 ease-linear cursor-pointer md:flex md:px-2 md:mt-0 md:w-auto dark:bg-transparent focus:ring-2 disabled:bg-transparent disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-primary-600 md:py-[3px] dark:hover:bg-theme-secondary-800 dark:hover:text-white dark:text-theme-dark-navy-400 dark:disabled:bg-transparent hover:text-theme-primary-700 hover:bg-theme-primary-200 focus:outline-hidden focus:ring-theme-primary-400"
        data-testid="WalletVote__button"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="vote"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                  />
                  <path
                    d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
      <button
        class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 w-full text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer md:hidden dark:text-white hover:text-white focus:ring-2 disabled:bg-transparent disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-dark-800 dark:hover:bg-theme-primary-500 dark:disabled:bg-transparent hover:bg-theme-primary-800 focus:outline-hidden focus:ring-theme-primary-400"
        data-testid="WalletVote__button_mobile"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="vote"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                  />
                  <path
                    d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > single vote networks > should render a vote for a standby delegate 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-center -mt-4 w-full md:flex-row md:items-center md:mt-0"
    data-testid="WalletVote"
  >
    <div
      class="flex overflow-hidden flex-col gap-0 justify-between items-start mb-3 w-full rounded border md:flex-row md:gap-2 md:items-center md:mb-0 md:rounded-none md:border-none border-theme-secondary-300 dark:border-theme-dark-700"
    >
      <div
        class="flex flex-row gap-2 items-center p-3 w-full text-sm font-semibold md:p-0 md:w-auto md:text-base md:leading-5 md:bg-transparent bg-theme-secondary-100 leading-[17px] md:dark:bg-transparent dark:bg-theme-dark-950"
      >
        <p
          class="text-sm md:text-base md:leading-5 text-theme-secondary-700 dark:text-theme-dark-200"
        >
          Voting for
        </p>
        <div
          class="xs:max-w-32 max-w-28 truncate sm:max-w-40 md:max-w-48"
        >
          <div
            class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
          >
            <span
              class="overflow-hidden min-w-0 text-sm text-base font-semibold md:text-base md:leading-5 no-ligatures dark:text-theme-dark-50"
              data-testid="Address__address"
            >
              0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col gap-2 py-3 px-4 text-base font-semibold leading-5 md:flex-row md:py-0 md:px-0"
      >
        <p
          class="text-sm md:text-base md:leading-5 text-theme-secondary-700 dark:text-theme-dark-200"
        >
          Rank
        </p>
        <p
          class="mb-2 text-sm font-semibold md:mb-0 md:text-base md:leading-5 text-theme-secondary-900 dark:text-theme-dark-50"
        >
          #54
        </p>
        <p
          class="text-sm md:hidden text-theme-secondary-700 dark:text-theme-dark-200"
        >
          Delegate Status
        </p>
        <div
          class="flex overflow-hidden justify-center items-center py-0.5 px-1 text-xs font-semibold rounded border-2 border-none dark:border-solid no-ligatures text-theme-warning-700 border-theme-danger-100 h-fit w-fit dark:border-theme-warning-700"
        >
          Standby
        </div>
        <div
          class="hidden relative p-0 mx-2 mr-3 ml-1 h-5 align-middle border-t-0 border-l border-solid md:flex border-theme-secondary-300 dark:border-s-theme-dark-700"
        />
      </div>
    </div>
    <div
      class="w-full md:w-auto md:max-md:self-end"
    />
  </div>
</DocumentFragment>
`;

exports[`WalletVote > single vote networks > should render a vote for an active validator 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-center -mt-4 w-full md:flex-row md:items-center md:mt-0"
    data-testid="WalletVote"
  >
    <div
      class="flex overflow-hidden flex-col gap-0 justify-between items-start mb-3 w-full rounded border md:flex-row md:gap-2 md:items-center md:mb-0 md:rounded-none md:border-none border-theme-secondary-300 dark:border-theme-dark-700"
    >
      <div
        class="flex flex-row gap-2 items-center p-3 w-full text-sm font-semibold md:p-0 md:w-auto md:text-base md:leading-5 md:bg-transparent bg-theme-secondary-100 leading-[17px] md:dark:bg-transparent dark:bg-theme-dark-950"
      >
        <p
          class="text-sm md:text-base md:leading-5 text-theme-secondary-700 dark:text-theme-dark-200"
        >
          Voting for
        </p>
        <div
          class="xs:max-w-32 max-w-28 truncate sm:max-w-40 md:max-w-48"
        >
          <div
            class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
          >
            <span
              class="overflow-hidden min-w-0 text-sm text-base font-semibold md:text-base md:leading-5 no-ligatures dark:text-theme-dark-50"
              data-testid="Address__address"
            >
              0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col gap-2 py-3 px-4 text-base font-semibold leading-5 md:flex-row md:py-0 md:px-0"
      >
        <p
          class="text-sm md:text-base md:leading-5 text-theme-secondary-700 dark:text-theme-dark-200"
        >
          Rank
        </p>
        <p
          class="mb-2 text-sm font-semibold md:mb-0 md:text-base md:leading-5 text-theme-secondary-900 dark:text-theme-dark-50"
        >
          #10
        </p>
        <p
          class="text-sm md:hidden text-theme-secondary-700 dark:text-theme-dark-200"
        >
          Delegate Status
        </p>
        <div
          class="flex overflow-hidden justify-center items-center py-0.5 px-1 text-xs font-semibold rounded border-2 border-none dark:bg-transparent dark:border dark:border-solid no-ligatures bg-theme-success-100 text-theme-success-700 h-fit w-fit dark:text-theme-success-500 dark:border-theme-success-800"
        >
          Active
        </div>
        <div
          class="hidden relative p-0 mx-2 mr-3 ml-1 h-5 align-middle border-t-0 border-l border-solid md:flex border-theme-secondary-300 dark:border-s-theme-dark-700"
        />
      </div>
    </div>
    <div
      class="w-full md:w-auto md:max-md:self-end"
    >
      <button
        class="hidden relative justify-center items-center py-3 px-5 mt-4 space-x-2 w-full text-base font-semibold leading-tight text-center bg-transparent rounded duration-100 ease-linear cursor-pointer md:flex md:px-2 md:mt-0 md:w-auto dark:bg-transparent focus:ring-2 disabled:bg-transparent disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-primary-600 md:py-[3px] dark:hover:bg-theme-secondary-800 dark:hover:text-white dark:text-theme-dark-navy-400 dark:disabled:bg-transparent hover:text-theme-primary-700 hover:bg-theme-primary-200 focus:outline-hidden focus:ring-theme-primary-400"
        data-testid="WalletVote__button"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="vote"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                  />
                  <path
                    d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
      <button
        class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 w-full text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer md:hidden dark:text-white hover:text-white focus:ring-2 disabled:bg-transparent disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-dark-800 dark:hover:bg-theme-primary-500 dark:disabled:bg-transparent hover:bg-theme-primary-800 focus:outline-hidden focus:ring-theme-primary-400"
        data-testid="WalletVote__button_mobile"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="vote"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                  />
                  <path
                    d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
